# Guardian-LINK

./: .gitmodules  LICENSE  README.md
contracts/: 4.5.0  hardhat.config.js  package-lock.json  package.json
contracts/contracts/: CCIPguardian.sol  GuardianWars.sol  USDCmock.sol  ccipDNS.sol
contracts/contracts/RiscZero/: RiscZeroGroth16Verifier.sol
contracts/scripts/: deploy.js  deploy2.js  deploy3.js  deploy4.js
extension/: background.js  devtools.html  devtools.js  guardian.css  guardian.html  guardian.js  manifest.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: CharacterCard.jsx  CharacterCard.module.css  CustomSVG.jsx  FhePay.css  FhePay.jsx  Navbar.jsx  Navbar.module.css  WeaponCard.jsx  WeaponCard.module.css
frontend/src/pages/: Dashboard.css  Dashboard.jsx  Game.jsx  Game.module.css  GamePlay.jsx  GamePlay.module.css  Home.jsx  Home.module.css  PlayerAllotment.jsx  PlayerAllotment.module.css  Profile.css  Profile.jsx
frontend/src/utils/: characters.json  constants.js  polybase.js  weapons.json
tls-proving/: .gitignore  .gitmodules  Cargo.toml  inject_test.json
tls-proving/src/: main.rs
