[package]
name = "tls-proving"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn" }
mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "76ed767" }
hyper = { version = "0.14", features = ["client", "http1"] }
eyre = "0.6.8"
tokio = { version = "1.12.0", features = ["full"] } 
tokio-rustls = { version = "0.24.1" }
rustls = { version = "0.21" }
serde_json = "1.0"
serde = { version = "1.0.147", features = ["derive"] }
tracing-subscriber = "0.3"
rocket = { version = "0.5.0", features = ["json"] }
